# VLM-Selective-Evaluation

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: docvqa_main.yaml  docvqa_robustness.yaml  experiment_matrix.yaml  infographicvqa_main.yaml  infographicvqa_robustness.yaml  protocol_robustness_matrix.yaml  run.yaml  stvqa_main.yaml  stvqa_robustness.yaml  textvqa_idefics3_smoke.yaml  textvqa_paper_main.yaml  textvqa_paper_robustness.yaml
scripts/: build_docvqa_source.py  build_gqa_source.py  build_infographicvqa_source.py  build_ocr_vqa_source_common.py  build_stvqa_source.py  build_textvqa_source.py  prepare_docvqa.sh  prepare_infographicvqa.sh  prepare_textvqa.sh  run_all.sh  run_experiment_matrix.py  run_protocol_robustness_matrix.py
tests/: test_docvqa_infographicvqa_dataset.py  test_e2e_pipeline.py  test_free_text_parsing.py  test_metrics_soft_scoring.py  test_mock_vlm_prompt_modes.py  test_normalization.py  test_parsing.py  test_prompting.py  test_protocol_robustness_matrix.py  test_quadrants.py  test_stvqa_dataset.py  test_stvqa_official_eval.py  test_synthetic_dataset.py  test_textvqa_official_eval.py  test_vram_profiles.py
vlm_selective_eval/: __init__.py  cli.py  config.py  constants.py  io_utils.py  pipeline.py  prompting.py  schemas.py
vlm_selective_eval/analysis/: __init__.py  metrics_cli.py  plots.py  plots_cli.py
vlm_selective_eval/data_gen/: __init__.py  generate_pairs.py
vlm_selective_eval/datasets/: __init__.py  base.py  docvqa.py  factory.py  infographicvqa.py  stvqa.py  synthetic.py  textvqa.py  transforms.py
(+26 files in other folders)
