[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-selective-eval"
version = "0.1.0"
description = "Pilot research codebase for structured selective evaluation of VLMs"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
  "PyYAML>=6.0.0",
  "accelerate>=0.26.0",
  "torch>=2.4.0",
  "torchvision==0.19.0",
  "torchaudio==2.4.0",
  "transformers==4.49.0",
  "pytest>=8.0.0",
  "qwen-vl-utils>=0.0.4",
]

[project.scripts]
vlm-selective-eval = "vlm_selective_eval.cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["vlm_selective_eval*"]
